2012-06-01 Santiago Munín <burnin1@gmail.com> 	* Little changes on the whole app: Fixed some Lint errors.
git-svn-id: https://svn.code.sf.net/p/pandora/code/trunk@6404 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f